# cli-llm

./: .env  .env.example  .gitignore  LICENSE  README.md  install.sh  install.vm.sh  install_reset.sh  pyproject.toml  setup.py
clillm/: __init__.py  __main__.py  cli.py  logo.py  utilities.py
clillm/callbacks/: utilities.py
clillm/commands/: hello.py  llm.py
clillm/models/: gemini.py
scripts/: install.vm.sh
tests/: test_clillm.py
tests/res/: test_text1.txt  test_text2.txt
